# astrbot_plugin_astrshell

./: .gitignore  LICENSE  README.md  main.py  metadata.yaml  pyproject.toml
astrshell/: adapter.py  cli.py  connection.py  events.py  formatter.py  preprocessor.py  recording.py  slash.py
astrshell/zsh/: .zshrc
