[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrbot-plugin-astrshell"
version = "0.2.1"
requires-python = ">=3.12"
dependencies = ["astrbot", "rich"]

[project.scripts]
astrshell       = "astrshell.cli:launch_shell"
astrshell-setup = "astrshell.cli:setup"

[tool.hatch.build.targets.wheel]
packages = ["astrshell"]

[tool.hatch.build.targets.wheel.force-include]
"astrshell/zsh/.zshrc" = "astrshell/zsh/.zshrc"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
